--- a/tictactoe.html
+++ b/tictactoe.html
@@ -32,7 +32,7 @@
                         <li><a href="suggestion.html">Suggestions</a></li>
                         <li><a href="hungrysnake.html">Back</a></li>
                         <li><a href="rockpaperscissor.html">Next</a></li>
-                        <li class="btn"><a href="login.html">Login</a></li>
+                        <li class="btn"><a href="index.html">Login</a></li>
                     </ul>
                 </nav>
             </header>
